--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -33,7 +33,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    //justify-content: space-between;
 
     //border-left: 1px solid #f1f1f1;
     //margin-right: -1px;
