--- a/src/components/BRK/brk.scss
+++ b/src/components/BRK/brk.scss
@@ -1,3 +1,11 @@
 .container {
   padding: 30px;
 }
+
+.item-link {
+  display: block;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 5px 0;
+  color: blue;
+}
